style.css
@font-face {
    font-family: 'Norse';
    src: url('./nord-font/Norse-Bold.woff2') format('woff2'),
        url('./nord-font/Norse-Bold.woff') format('woff');
    font-weight: bold;
    font-style: normal;
    font-display: swap;
}
*, *::before, *::after {
    box-sizing: border-box;
}
:root {
    --whole-height: 100vh;
    --hundred-per: 100%;
    --left-space: 45px;
    --font-default: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
html, body {
    height: var(--hundred-per);
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}   
.whole-container {
    display: flex;
}
.left-container {
    background-image: url(./background.jpg);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    min-height: var(--whole-height);
    flex: 1;
    flex-grow: 3;
    display: flex;
    flex-direction: column;
    justify-content: end;
    align-items: center;
    position: relative;
}
.logo-container {
    background-color: rgba(0, 0, 0, 0.418);
    position: absolute;
    top: 7rem;
    margin: 0;
    padding: 1rem;
    width: var(--hundred-per);
    display: flex;
    align-items: center;
    justify-content: center;
}
#logo-icon {
    width: 4rem;
}
#logo-text {
    font-family: "Norse", system-ui, -apple-system,
        BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: 4rem;
    margin: 0;
    color: white;
}
.credit, #link, :visited {
    color: rgba(255, 255, 255, 0.795);
}
.credit {
    font-size: 0.7rem;
    position: absolute;
    margin: 0;
    bottom: 10px;
}
.right-container {
    background-color: #F9FAFB;
    min-height: var(--whole-height);
    flex: 1;
    flex-grow: 5;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}
.paragraph {
    font-size: 1.5rem;
    font-weight: 550;
    display: flex;
    flex-direction: column;
    position: relative;
    left: var(--left-space);
    max-width: 43rem;
    font-family: var(--font-default);
}
.form-container {
    background-color: white;
    display: flex;
    flex-direction: column;
    height: 30%;
}
.form-title {
    font-size: 1.5rem;    
    font-weight: 600;
    font-family: var(--font-default);
    position: relative;
    left: var(--left-space);
}
.form{
    position: relative;
    left: var(--left-space);
    display: flex;
    flex-wrap: wrap;
    flex-basis: 100%;
    gap: 20px;
}
.form-group {
    display: flex;
    flex-direction: column;
    flex: 1 1 45%;
}

